# LearnGL

./: 3d.c  3d_instanced.c  CMakeLists.txt  README.md  camera.c  common.c  common.h  cube.c  first_triangle.c  first_triangle_a.c  first_triangle_b.c  first_triangle_c.c  instances.c  light.c  light_env.c  light_point.c  material.c  shader.c  texture.c  transform.c
cglm/: affine-mat.h  affine.h  affine2d.h  applesimd.h  bezier.h  box.h  call.h  cam.h  color.h  common.h  curve.h  ease.h  euler.h  frustum.h  io.h  mat2.h  mat3.h  mat4.h  plane.h  project.h  quat.h  ray.h  sphere.h  struct.h  types-struct.h  types.h  util.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h
cglm/call/: affine.h  affine2d.h  bezier.h  box.h  cam.h  curve.h  ease.h  euler.h  frustum.h  io.h  mat2.h  mat3.h  mat4.h  plane.h  project.h  quat.h  ray.h  sphere.h  vec2.h  vec3.h  vec4.h
cglm/simd/: arm.h  intrin.h  x86.h
cglm/simd/avx/: affine.h  mat4.h
cglm/simd/neon/: mat4.h
cglm/simd/sse2/: affine.h  mat2.h  mat3.h  mat4.h  quat.h
cglm/struct/: affine.h  affine2d.h  box.h  cam.h  color.h  curve.h  euler.h  frustum.h  io.h  mat2.h  mat3.h  mat4.h  plane.h  project.h  quat.h  sphere.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h
data/shaders/: 10_light_point.fs.glsl  10_light_point.vs.glsl  4_cube.fs.glsl  4_cube.vs.glsl  6_camera.fs.glsl  7_diffuse.fs.glsl  7_emissive.fs.glsl  7_emissive.vs.glsl  8_material.fs.glsl  9_light_env.fs.glsl
